--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 
 :root {
     --bg-color: #EF007F;
-    --primary-color: #DDDDDD;
-    --secondary-color: #F05454;
+    --primary-color: #FFCBDB;
+    --secondary-color: #FF78CB;
     --font: "Nunito Sans", sans-serif;
 }
 
